--- a/app/ServiceApp/package.json
+++ b/app/ServiceApp/package.json
@@ -19,6 +19,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.4",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.6",
