--- a/app/ServiceApp/package.json
+++ b/app/ServiceApp/package.json
@@ -10,6 +10,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
     "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
@@ -24,6 +25,7 @@
     "react-native-collapsible": "^1.6.1",
     "react-native-date-picker": "^4.3.4",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-gesture-handler": "^2.17.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-crop-picker": "^0.40.1",
     "react-native-push-notification": "^8.1.1",
