--- a/app/ServiceApp/package.json
+++ b/app/ServiceApp/package.json
@@ -32,6 +32,7 @@
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.3",
     "react-native-screens": "^3.26.0",
+    "react-native-star-rating-widget": "^1.8.0",
     "react-native-svg": "^13.14.0",
     "react-native-toast-message": "^2.1.7",
     "react-redux": "^8.1.3"
