--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,2 +1,5 @@
 /server/node_modules/
 node_modules/
+/server/settings/service-app-efdfd-firebase-adminsdk-bid5z-e1f009944b.json
+/settings/service-app-efdfd-firebase-adminsdk-bid5z-e1f009944b.json
+service-app-efdfd-firebase-adminsdk-bid5z-e1f009944b.json
