--- a/app/ServiceApp/package.json
+++ b/app/ServiceApp/package.json
@@ -12,9 +12,9 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-native-community/push-notification-ios": "^1.11.0",
+    "@react-native-community/slider": "^4.5.0",
     "@react-native-firebase/app": "^18.6.1",
     "@react-native-firebase/messaging": "^18.6.1",
-    "@react-native-community/slider": "^4.5.0",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.15",
@@ -30,6 +30,7 @@
     "react-native-gesture-handler": "^2.17.1",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-crop-picker": "^0.40.1",
+    "react-native-localize": "^3.2.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.3",
