--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.17.3",
     "firebase-admin": "^12.3.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.6.3",
     "tslib": "^2.6.2",
     "yup": "^1.3.2"
