--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "moment": "^2.30.1",
     "mongoose": "^7.6.3",
     "tslib": "^2.6.2",
+    "twilio": "^5.2.2",
     "yup": "^1.3.2"
   },
   "devDependencies": {
