--- a/app/ServiceApp/package.json
+++ b/app/ServiceApp/package.json
@@ -31,6 +31,7 @@
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-image-crop-picker": "^0.40.1",
     "react-native-localize": "^3.2.0",
+    "react-native-otp-textinput": "^1.1.6",
     "react-native-push-notification": "^8.1.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^4.7.3",
